# sara-thermal-reading

./: .env.example  .gitignore  Dockerfile  README.md  example_thermal_reading.py  main.py  pyproject.toml  requirements.txt  utils_cli.py
.github/workflows/: deploy_to_development.yml  deploy_to_staging.yml  promote_to_production.yml  publish_component.yml  pythonpackage.yml  update_aurora_deployment.yml
example-data/: polygon.json
sandbox/: create_reference_images.py  create_reference_polygons.py  download_raw_data.py  run_matching.py  show_fff.py  upload_ref_to_storage_account.py
sara_thermal_reading/: blob.py  file_utils.py  logger.py  main.py  main_fff_workflow.py  main_workflow.py  plotting.py
sara_thermal_reading/config/: settings.py
sara_thermal_reading/dev_utils/: create_reference_polygon.py  run_fff_workflow_local_files.py
sara_thermal_reading/file_io/: fff_loader.py  file_utils.py
sara_thermal_reading/image_alignment/: __init__.py  align_two_images_orb_bf_cv2.py  warp_polygon_orb_bf_cv2.py
sara_thermal_reading/image_processing/: __init__.py  convert_thermal_to_uint8.py  find_max_temperature_in_polygon.py  find_temperature_in_polygon.py
sara_thermal_reading/visualization/: create_annotated_thermal_visualization.py  plotting.py
tests/: test_find_temperature_in_polygon.py  test_thermal_reading.py
